--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "setup": "chmod +x scripts/setup.sh && ./scripts/setup.sh",
+    "agent-setup": "chmod +x agent-setup.sh && ./agent-setup.sh",
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:reset": "docker compose down -v && docker compose up -d && sleep 10",
+    "db:logs": "docker compose logs postgres",
+    "test-apis": "echo 'Testing APIs...' && curl -X POST http://localhost:3000/api/auth/login -H 'Content-Type: application/json' -d '{\"email\": \"admin@coffeeshop.com\", \"password\": \"admin123\"}' && echo '' && curl http://localhost:3000/api/products"
   },
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "next": "15.5.0",
+    "pg": "^8.13.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/pg": "^8.11.10"
   },
   "devDependencies": {
     "typescript": "^5",
