Testing updated docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,29 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d coffee_shop"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  web:
+    build: .
+    container_name: coffee-shop-web
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+      - /app/.next
+    environment:
+      - NODE_ENV=development
+      - DATABASE_URL=postgresql://admin:password@postgres:5432/coffee_shop
+      - JWT_SECRET=your-super-secret-jwt-key-here-make-it-long
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: npm run dev
 
 volumes:
   postgres_data:
